FellowStudents/Rama/catkin_ws/log/build_2023-05-18_15-55-18/nodes/stderr.log
  File "/home/rama/catkin_ws/install/nodes/lib/python3.8/site-packages/nodes/kf_depthCamera.py", line 90
    def main:
            ^
SyntaxError: invalid syntax

